--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,6 +1,7 @@
 {   
-    "LOOTSHEET:SheetName": "Лист торговца и сундука",
+    "LOOTSHEET.SheetName": "Лист торговца и сундука",
     "LOOTSHEET.Merchant":"Торговец",
+    "LOOTSHEET.Loot":"добыча",
     "LOOTSHEET.Buy":"Купить",
     "LOOTSHEET.BuyStack":"Купить несколько",
     "LOOTSHEET.Quantity":"Количество"
