--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
     "LOOTSHEET.TypeOfSheetName":"Type",
     "LOOTSHEET.TypeOfSheet":"Type of sheet:",
     "LOOTSHEET.PriceModifier":"Price Modifier",
+    "LOOTSHEET.LootAll":"Loot All",
     "LOOTSHEET.GMSettings":"GM Settings",
     "LOOTSHEET.TypeOfSheetHelp":"Loot: allows for looting of items and coins.\nMerchant: allows players to purchase items directly from the sheet.",
     "LOOTSHEET.MerchantSettings":"Merchant Settings",
